--- a/kaggle_hate-speech-bert-cnn-and-bert-mlp-in-tensorflow.ipynb
+++ b/kaggle_hate-speech-bert-cnn-and-bert-mlp-in-tensorflow.ipynb
@@ -5,7 +5,7 @@
    "id": "bc9135b3-d096-46bf-8d57-24ec70d8b1ae",
    "metadata": {},
    "source": [
-    "https://www.kaggle.com/code/giovanimachado/hate-speech-bert-cnn-and-bert-mlp-in-tensorflow"
+    "Tutorial https://www.kaggle.com/code/giovanimachado/hate-speech-bert-cnn-and-bert-mlp-in-tensorflow"
    ]
   },
   {
